This commit was manufactured by cvs2svn to create tag 'MMBase-1_7_4_Final'.