@@ -22,13 +22,11 @@ import org.mmbase.util.logging.Logging;
  * @see org.mmbase.util.CompareInterface
  *
  * @author Rico Jansen
- * @version $Id: MMContainerCompare.java,v 1.7 2005-05-14 14:04:45 nico Exp $
- * @todo   Should implement java.util.Comparator. Perhaps should be named MMObjectNodeComparator. Btw, this class is not used.
- * 
+ * @version $Id: MMContainerCompare.java,v 1.4 2003-03-10 11:50:31 pierre Exp $
  */
 public class MMContainerCompare implements CompareInterface {
 
-    private static Logger log = Logging.getLoggerInstance(MMContainerCompare.class);
+    private static Logger log = Logging.getLoggerInstance(MMContainerCompare.class.getName());
 
     public final static boolean ASC=true;
     public final static boolean DESC=false;
@@ -44,11 +42,13 @@ public class MMContainerCompare implements CompareInterface {
     }
 
     public MMContainerCompare(Vector orderfields) {
+        String field;
+
         orderdirections=new Vector();
         this.orderfields=orderfields;
         for (Enumeration e=orderfields.elements();e.hasMoreElements();) {
-            e.nextElement();
-            orderdirections.addElement(Boolean.valueOf(ASC));
+            field=(String)e.nextElement();
+            orderdirections.addElement(new Boolean(ASC));
         }
     }
 
@@ -67,7 +67,7 @@ public class MMContainerCompare implements CompareInterface {
 
     public void addField(String field,boolean direction) {
         orderfields.addElement(field);
-        orderdirections.addElement(Boolean.valueOf(direction));
+        orderdirections.addElement(new Boolean(direction));
     }
 
     public boolean setField(String field,boolean direction) {
@@ -76,7 +76,7 @@ public class MMContainerCompare implements CompareInterface {
 
         i=orderfields.indexOf(field);
         if (i!=-1) {
-            orderdirections.setElementAt(Boolean.valueOf(direction),i);
+            orderdirections.setElementAt(new Boolean(direction),i);
             rtn=true;
         } else {
             rtn=false;
